libs/modkit-canonical-errors/tests/ui/missing_field_violation_on_invalid_argument.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<ResourceOptional, NeedsFieldViolation>`, but its trait bounds were not satisfied
 --> tests/ui/missing_field_violation_on_invalid_argument.rs:7:54
  |
7 |     let _err = UserResourceError::invalid_argument().create();
  |                                                      ^^^^^^ method cannot be called due to unsatisfied trait bounds
  |
 ::: src/builder.rs
  |
  | pub struct NeedsFieldViolation;
  | ------------------------------ doesn't satisfy `NeedsFieldViolation: ContextResolved`
  |
  = note: the following trait bounds were not satisfied:
          `NeedsFieldViolation: ContextResolved`
